# python-cli-template

./: README.md  pyproject.toml
src/: __main__.py
